# github-symphony

./: .gitignore  AGENTS.md  README.md  WORKFLOW.example.md  package.json
.trellis/: .template-hashes.json
.trellis/spec/: README.md
.trellis/spec/backend/: codex-runner-autonomy.md  index.md  logging.md  workspace-checkout.md
.trellis/spec/frontend/: ipc-electron.md  state-management.md
.trellis/spec/shared/: git-conventions.md  index.md  project-context.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  (+1 more)
backend/: README.md  pyproject.toml
backend/packaging/: README.md  backend_entry.py
backend/src/symphony_github/: __init__.py  __main__.py  cli.py
backend/src/symphony_github/api/: README.md  __init__.py  server.py
backend/src/symphony_github/codex/: README.md  __init__.py  app_server.py
backend/src/symphony_github/core/: README.md  __init__.py  config.py  diagnostics.py  events.py  models.py  orchestrator.py  prompt.py  runner.py  runtime.py  settings.py  state_policy.py  workflow.py  workspace.py
backend/src/symphony_github/integrations/: __init__.py
backend/src/symphony_github/integrations/github/: README.md  __init__.py  client.py  discovery.py  dynamic_tools.py  tracker.py
backend/tests/: test_core.py
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
desktop/electron/: main.ts  preload.cts  preload.ts
desktop/src/: App.tsx  api.ts  main.tsx  settingsClient.ts  styles.css  types.ts
docs/: architecture.md  codex-app-server.md  development.md  github-permissions.md  smoke-test.md
(+20 files in other folders)
